chore: use ruff for formatting

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"lint:types": "npm run check",
 		"lint:backend": "ruff check backend/",
 		"format": "prettier --plugin-search-dir --write \"**/*.{js,ts,svelte,css,md,html,json}\"",
-		"format:backend": "black . --exclude \".venv/|/venv/\"",
+		"format:backend": "ruff format . --exclude \"/venv/\"",
 		"i18n:parse": "i18next --config i18next-parser.config.ts && prettier --write \"src/lib/i18n/**/*.{js,json}\"",
 		"cy:open": "cypress open",
 		"test:frontend": "vitest --passWithNoTests",
