--- a/.env.example
+++ b/.env.example
@@ -16,14 +16,14 @@ ANONYMIZED_TELEMETRY=false
 # to avoid repetitive startup connections
 LITELLM_LOCAL_MODEL_COST_MAP="True"
 
-ENABLE_MAIL="True"
-MAIL_USERNAME="user@example.com"
-MAIL_PASSWORD=""
-MAIL_FROM="user@example.com"
-MAIL_PORT="587"
-MAIL_SERVER="smtp.gmail.com"
-MAIL_FROM_NAME="Desired Name"
-MAIL_STARTTLS="True"
-MAIL_SSL_TLS="False"
+ENABLE_EMAIL="True"
+EMAIL_USERNAME="user@example.com"
+EMAIL_PASSWORD=""
+EMAIL_FROM="user@example.com"
+EMAIL_PORT="587"
+EMAIL_SERVER="smtp.gmail.com"
+EMAIL_FROM_NAME="Desired Name"
+EMAIL_STARTTLS="True"
+EMAIL_SSL_TLS="False"
 
 FRONTEND_URL="http://localhost:5173"
