add PWA support with SWSE info.

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ ANONYMIZED_TELEMETRY=false
 # Use locally bundled version of the LiteLLM cost map json
 # to avoid repetitive startup connections
 LITELLM_LOCAL_MODEL_COST_MAP="True"
+
+###             ###
+# SWSE 自定义环境变量
+###             ###
+
+WEBUI_NAME="智采 AIbot"
