--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,1 +1,16 @@
-{}
+{
+    "name": "智采 AIbot - 上海外高桥造船海工设计 - Digitalink",
+    "short_name": "智采 AIbot",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#343541",
+    "theme_color": "#343541",
+    "orientation": "portrait-primary",
+    "icons": [
+        {
+            "src": "/static/logo.png",
+            "type": "image/png",
+            "sizes": "500x500"
+        }
+    ]
+}
