--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Create GitHub release
       uses: actions/github-script@v5
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.REGISTRY_PASSWORD }}
         script: |
           const changelog = `${{ steps.changelog.outputs.content }}`;
           const release = await github.rest.repos.createRelease({
@@ -56,7 +56,7 @@ jobs:
         name: package
         path: .
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
 
     - name: Trigger Docker build workflow
       uses: actions/github-script@v7
