--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -4,33 +4,80 @@
 		"default_locale": "en-US",
 		"prompt_suggestions": [
 			{
-				"title": ["Help me study", "vocabulary for a college entrance exam"],
+				"title": [
+					"Help me study",
+					"vocabulary for a college entrance exam"
+				],
 				"content": "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option."
 			},
 			{
-				"title": ["Give me ideas", "for what to do with my kids' art"],
+				"title": [
+					"Give me ideas",
+					"for what to do with my kids' art"
+				],
 				"content": "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter."
 			},
 			{
-				"title": ["Tell me a fun fact", "about the Roman Empire"],
+				"title": [
+					"Tell me a fun fact",
+					"about the Roman Empire"
+				],
 				"content": "Tell me a random fun fact about the Roman Empire"
 			},
 			{
-				"title": ["Show me a code snippet", "of a website's sticky header"],
+				"title": [
+					"Show me a code snippet",
+					"of a website's sticky header"
+				],
 				"content": "Show me a code snippet of a website's sticky header in CSS and JavaScript."
 			},
 			{
-				"title": ["Explain options trading", "if I'm familiar with buying and selling stocks"],
+				"title": [
+					"Explain options trading",
+					"if I'm familiar with buying and selling stocks"
+				],
 				"content": "Explain options trading in simple terms if I'm familiar with buying and selling stocks."
 			},
 			{
-				"title": ["Overcome procrastination", "give me tips"],
+				"title": [
+					"Overcome procrastination",
+					"give me tips"
+				],
 				"content": "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?"
 			},
 			{
-				"title": ["Grammar check", "rewrite it for better readability "],
+				"title": [
+					"Grammar check",
+					"rewrite it for better readability "
+				],
 				"content": "Check the following sentence for grammar and clarity: \"[sentence]\". Rewrite it for better readability while maintaining its original meaning."
 			}
 		]
+	},
+	"rag": {
+		"template": "Use the following context as your learned knowledge, inside <context></context> XML tags.\n<context>\n    [context]\n</context>\n\nWhen answer to user:\n- If you don't know, just say that you don't know.\n- If you don't know when you are not sure, ask for clarification.\nAvoid mentioning that you obtained the information from the context.\nAnd answer according to the language of the user's question.\n\nGiven the context information, answer the query.\nQuery: [query]",
+		"top_k": 5,
+		"relevance_threshold": 0.0,
+		"enable_hybrid_search": false,
+		"pdf_extract_images": false,
+		"youtube_loader_language": [
+			"en"
+		],
+		"enable_web_loader_ssl_verification": null,
+		"web": {
+			"search": {
+				"enable": true,
+				"engine": "searxng",
+				"searxng_query_url": "",
+				"google_pse_api_key": "",
+				"google_pse_engine_id": "",
+				"brave_search_api_key": "",
+				"serpstack_api_key": "",
+				"serpstack_https": true,
+				"serper_api_key": "",
+				"result_count": 3,
+				"concurrent_requests": 10
+			}
+		}
 	}
 }
