no_proxy changes for proxy environment

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ OLLAMA_BASE_URL='http://localhost:11434'
 OPENAI_API_BASE_URL=''
 OPENAI_API_KEY=''
 
+NO_PROXY=localhost,127.0.0.0/8,172.22.0.0/16
+no_proxy=localhost,127.0.0.0/8,172.22.0.0/16
+
 # AUTOMATIC1111_BASE_URL="http://localhost:7860"
 
 # DO NOT TRACK
