--- a/docker-compose.pipelines.yaml
+++ b/docker-compose.pipelines.yaml
@@ -7,6 +7,11 @@ services:
     tty: true
     restart: unless-stopped
     image: ollama/ollama:${OLLAMA_DOCKER_TAG-latest}
+    environment:
+      - NO_PROXY=${NO_PROXY},ollama,pipelines,open-webui
+      - no_proxy=${no_proxy},ollama,pipelines,open-webui
+    networks:
+      - open-webui
 
   pipelines:
     build:
@@ -21,12 +26,16 @@ services:
     restart: unless-stopped
     #image: ghcr.io/open-webui/pipelines:main
     environment:
-      - 'OLLAMA_BASE_URL=http://ollama:11434'
-      - 'GITHUB_TOKEN='
-    extra_hosts:
-      - host.docker.internal:host-gateway
+      - OLLAMA_BASE_URL=http://ollama:11434
+      - GITHUB_TOKEN=
+      - NO_PROXY=${NO_PROXY},ollama,pipelines,open-webui
+      - no_proxy=${no_proxy},ollama,pipelines,open-webui
+    #extra_hosts:
+    #  - host.docker.internal:host-gateway
     ports:
       - 9099:9099
+    networks:
+      - open-webui
 
   open-webui:
     #build:
@@ -47,11 +56,19 @@ services:
       - 'WEBUI_SECRET_KEY='
       - 'OPENAI_API_BASE_URL=http://pipelines:9099'
       - 'OPENAI_API_KEY=0p3n-w3bu!'
-    extra_hosts:
-      - host.docker.internal:host-gateway
+      - NO_PROXY=${NO_PROXY},ollama,pipelines,open-webui
+      - no_proxy=${no_proxy},ollama,pipelines,open-webui
+
+    #extra_hosts:
+    #  - host.docker.internal:host-gateway
     restart: unless-stopped
+    networks:
+      - open-webui
 
 volumes:
   ollama: {}
   open-webui: {}
   pipelines: {}
+
+networks:
+  open-webui:
