--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -1,83 +1,36 @@
 {
 	"version": 0,
 	"ui": {
-		"default_locale": "fr-FR",
+		"default_locale": "en-US",
 		"prompt_suggestions": [
 			{
-				"title": [
-					"Help me study",
-					"vocabulary for a college entrance exam"
-				],
+				"title": ["Help me study", "vocabulary for a college entrance exam"],
 				"content": "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option."
 			},
 			{
-				"title": [
-					"Give me ideas",
-					"for what to do with my kids' art"
-				],
+				"title": ["Give me ideas", "for what to do with my kids' art"],
 				"content": "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter."
 			},
 			{
-				"title": [
-					"Tell me a fun fact",
-					"about the Roman Empire"
-				],
+				"title": ["Tell me a fun fact", "about the Roman Empire"],
 				"content": "Tell me a random fun fact about the Roman Empire"
 			},
 			{
-				"title": [
-					"Show me a code snippet",
-					"of a website's sticky header"
-				],
+				"title": ["Show me a code snippet", "of a website's sticky header"],
 				"content": "Show me a code snippet of a website's sticky header in CSS and JavaScript."
 			},
 			{
-				"title": [
-					"Explain options trading",
-					"if I'm familiar with buying and selling stocks"
-				],
+				"title": ["Explain options trading", "if I'm familiar with buying and selling stocks"],
 				"content": "Explain options trading in simple terms if I'm familiar with buying and selling stocks."
 			},
 			{
-				"title": [
-					"Overcome procrastination",
-					"give me tips"
-				],
+				"title": ["Overcome procrastination", "give me tips"],
 				"content": "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?"
 			},
 			{
-				"title": [
-					"Grammar check",
-					"rewrite it for better readability "
-				],
+				"title": ["Grammar check", "rewrite it for better readability "],
 				"content": "Check the following sentence for grammar and clarity: \"[sentence]\". Rewrite it for better readability while maintaining its original meaning."
 			}
-		]
-	},
-	"audio": {
-		"alltalk": {
-			"api_base_url": "http://192.168.1.32:7851",
-			"api_model": "XTTSv2 Local",
-			"api_voice": "James_Earl_Jones CC3.wav",
-			"api_deepspeed": true,
-			"api_low_vram": false,
-			"api_use_streaming": false,
-			"api_use_narrator": true,
-			"api_narrator_voice": "female_07.wav"
-		}
-	},
-	"openai": {
-		"enable": false,
-		"api_base_urls": [
-			"https://api.openai.com/v1"
-		],
-		"api_keys": [
-			""
-		]
-	},
-	"ollama": {
-		"base_urls": [
-			"http://localhost:11434"
 		]
 	}
 }
