--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -4,32 +4,32 @@
 		"default_locale": "en-US",
 		"prompt_suggestions": [
 			{
-				"title": ["Help me study", "vocabulary for a college entrance exam"],
-				"content": "Help me study vocabulary: write a sentence for me to fill in the blank, and I'll try to pick the correct option."
+				"title": ["Help me improve", "my business's online presence"],
+				"content": "What are some effective strategies to improve my business's online presence and attract more customers?"
 			},
 			{
-				"title": ["Give me ideas", "for what to do with my kids' art"],
-				"content": "What are 5 creative things I could do with my kids' art? I don't want to throw them away, but it's also so much clutter."
+				"title": ["Give me ideas", "for marketing my products"],
+				"content": "Can you suggest some innovative marketing ideas to promote my products and increase sales?"
 			},
 			{
-				"title": ["Tell me a fun fact", "about the Roman Empire"],
-				"content": "Tell me a random fun fact about the Roman Empire"
+				"title": ["Share a tip", "for effective time management"],
+				"content": "What are some time management techniques that can help me be more productive in my business?"
 			},
 			{
-				"title": ["Show me a code snippet", "of a website's sticky header"],
-				"content": "Show me a code snippet of a website's sticky header in CSS and JavaScript."
+				"title": ["Explain", "how to create a business plan"],
+				"content": "Can you guide me through the steps of creating a comprehensive business plan?"
 			},
 			{
-				"title": ["Explain options trading", "if I'm familiar with buying and selling stocks"],
-				"content": "Explain options trading in simple terms if I'm familiar with buying and selling stocks."
+				"title": ["Advise me", "on financial planning for my business"],
+				"content": "What are some key considerations for effective financial planning and management for a small business?"
 			},
 			{
-				"title": ["Overcome procrastination", "give me tips"],
-				"content": "Could you start by asking me about instances when I procrastinate the most and then give me some suggestions to overcome it?"
+				"title": ["Help me understand", "the basics of digital marketing"],
+				"content": "Can you explain the basics of digital marketing and how I can leverage it for my business?"
 			},
 			{
-				"title": ["Grammar check", "rewrite it for better readability "],
-				"content": "Check the following sentence for grammar and clarity: \"[sentence]\". Rewrite it for better readability while maintaining its original meaning."
+				"title": ["Suggest ways", "to improve customer satisfaction"],
+				"content": "What are some strategies to enhance customer satisfaction and build long-term loyalty?"
 			}
 		]
 	}
