--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # The path '/ollama' will be redirected to the specified backend URL
 OLLAMA_BASE_URL='http://localhost:11434'
 
-OPENAI_API_BASE_URL=''
-OPENAI_API_KEY=''
+OPENAI_API_BASE_URL='https://api.openai.com/v1'
+OPENAI_API_KEY='sk-proj-1oC0WbQz5tvmjY3GKnXBT3BlbkFJGqRWuh5ZVWW0svZVWtPY'
 
 # AUTOMATIC1111_BASE_URL="http://localhost:7860"
 
