--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,12 +22,10 @@ services:
     ports:
       - ${OPEN_WEBUI_PORT-3006}:8080
     environment:
-      - 'OLLAMA_BASE_URL=http://ollama:11434'
+      - 'OLLAMA_BASE_URL=http://18.157.79.230:11434'
       - 'WEBUI_SECRET_KEY='
       - VIRTUAL_HOST=llm.cereinsight.com
       - CERT_NAME=cereinsight.com
-    extra_hosts:
-      - host.docker.internal:host-gateway
     restart: unless-stopped
 
 volumes:
