--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/kit": "^1.30.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/bun": "latest",
+		"@types/mathjax": "^0.0.40",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
 		"autoprefixer": "^10.4.16",
@@ -68,6 +69,7 @@
 		"js-sha256": "^0.10.1",
 		"katex": "^0.16.9",
 		"marked": "^9.1.0",
+		"mathjax": "^3.2.2",
 		"mermaid": "^10.9.1",
 		"pyodide": "^0.26.1",
 		"socket.io-client": "^4.2.0",
