--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"katex": "^0.16.9",
 		"marked": "^9.1.0",
 		"mathjax": "^3.2.2",
+		"mathjax-full": "^3.2.2",
 		"mermaid": "^10.9.1",
 		"pyodide": "^0.26.1",
 		"socket.io-client": "^4.2.0",
