Initial Ox Setup

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Ollama URL for the backend to connect
 # The path '/ollama' will be redirected to the specified backend URL
-OLLAMA_BASE_URL='http://localhost:11434'
+OLLAMA_BASE_URL='http://18.237.49.156:11434'
+OLLAMA_HOST='18.237.49.156'
+WEBUI_NAME='Ox'
 
 OPENAI_API_BASE_URL=''
 OPENAI_API_KEY=''
