feat: move the SSO configuretion params out to the ENV

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,10 @@ services:
     environment:
       - 'OLLAMA_BASE_URL=http://ollama:11434'
       - 'WEBUI_SECRET_KEY='
+      - 'CLIENT_ID='
+      - 'CLIENT_SECRET='
+      - 'TENANT='
+      - 'REDIRECT_URI='
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
