--- a/kubernetes/helm/templates/hrwebui-deployment.yaml
+++ b/kubernetes/helm/templates/hrwebui-deployment.yaml
@@ -49,26 +49,26 @@ spec:
           # value: {{ include "ollama.url" . | quote }}
         # SSO Configuration
         - name: CLIENT_ID
-          {{- if .Values.sso.enabled.enabled}}
-          value: {{ .Values.sso.enabled.clientId}}
+          {{- if .Values.hrwebui.sso.azure.enabled}}
+          value: {{ .Values.hrwebui.sso.azure.clientId}}
           {{- else}}
           value: ffa8bad1-4e70-4514-8c2c-d1f6ddfdbd2e
           {{- end}}
         - name: CLIENT_SECRET
-          {{- if .Values.sso.enabled.enabled}}
-          value: {{ .Values.sso.enabled.clientSecret}}
+          {{- if .Values.hrwebui.sso.azure.enabled}}
+          value: {{ .Values.hrwebui.sso.azure.clientSecret}}
           {{- else}}
           value: 89r8Q~AC8EMrvzimVaSNIBVwtGTz0zYVIz1I1bjL
           {{- end}}
         - name: TENANT
-          {{- if .Values.sso.enabled.enabled}}
-          value: {{ .Values.sso.enabled.tenant}}
+          {{- if .Values.hrwebui.sso.azure.enabled}}
+          value: {{ .Values.hrwebui.sso.azure.tenant}}
           {{- else}}
           value: c93272d3-1b07-4b3d-a3b6-19b34a973915
           {{- end}}
         - name: REDIRECT_URI
-          {{- if .Values.sso.enabled.enabled}}
-          value: {{ .Values.sso.enabled.redirectUri}}
+          {{- if .Values.hrwebui.sso.azure.enabled}}
+          value: {{ .Values.hrwebui.sso.azure.redirectUri}}
           {{- else}}
           value: http://localhost:8080/api/v1/auths/signin/callback
           {{- end}}
