add: dependency quick-score

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"marked": "^9.1.0",
 		"mermaid": "^10.9.1",
 		"pyodide": "^0.26.1",
+		"quick-score": "^0.2.0",
 		"socket.io-client": "^4.2.0",
 		"sortablejs": "^1.15.2",
 		"svelte-sonner": "^0.3.19",
