--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,7 @@ services:
       - 'CLIENT_SECRET='
       - 'TENANT='
       - 'REDIRECT_URI='
+      - 'HR_EMAIL='
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
