Add Mem0 for memory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,8 @@ dependencies = [
     "pytube==15.0.0",
     "extract_msg",
     "pydub",
-    "duckduckgo-search~=6.1.5"
+    "duckduckgo-search~=6.1.5",
+    "mem0ai==0.0.9"
 
 ]
 readme = "README.md"
