--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,34 +1,43 @@
 services:
-  ollama:
-    volumes:
-      - ollama:/root/.ollama
-    container_name: ollama
-    pull_policy: always
-    tty: true
-    restart: unless-stopped
-    image: ollama/ollama:${OLLAMA_DOCKER_TAG-latest}
-
   open-webui:
     build:
       context: .
       args:
         OLLAMA_BASE_URL: '/ollama'
       dockerfile: Dockerfile
-    image: ghcr.io/open-webui/open-webui:${WEBUI_DOCKER_TAG-main}
+    image: iad.ocir.io/idogrsehxj39/open-webui-es:latest
     container_name: open-webui
     volumes:
       - open-webui:/app/backend/data
-    depends_on:
-      - ollama
     ports:
       - ${OPEN_WEBUI_PORT-3000}:8080
     environment:
-      - 'OLLAMA_BASE_URL=http://ollama:11434'
-      - 'WEBUI_SECRET_KEY='
+      - 'WEBUI_NAME=CplayGpt'
+      #- 'OLLAMA_BASE_URL=http://ollama:11434'
+      - 'WEBUI_SECRET_KEY=Estrada14@'
+      - 'WEBUI_AUTH=True'
+      - 'DATABASE_URL=postgresql://postgres:mysecretpassword@postgres:5432/cplaygpt?sslmode=disable'
+        #- 'DATABASE_URL=postgresql://a6e7mf:xau_7SGLERNn2aDuin6y0FMiOxTyXdyhSiEu1@us-east-1.sql.xata.sh:5432/cplaygpt:main?sslmode=require'
     extra_hosts:
       - host.docker.internal:host-gateway
+    depends_on:
+      - postgres
+    restart: unless-stopped
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      - POSTGRES_DB=cplaygpt
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=mysecretpassword
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     restart: unless-stopped
 
 volumes:
   ollama: {}
   open-webui: {}
+  postgres-data: {}
