add data to manifest.json PWA

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,1 +1,15 @@
-{}
+{
+    "name": "CplayGpt",
+    "short_name": "CplayGpt",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#343541",
+    "orientation": "portrait-primary",
+    "icons": [
+        {
+            "src": "/static/logo.png",
+            "type": "image/png",
+            "sizes": "500x500"
+        }
+    ]
+}
