--- a/kubernetes/helm/templates/hrwebui-deployment.yaml
+++ b/kubernetes/helm/templates/hrwebui-deployment.yaml
@@ -72,6 +72,12 @@ spec:
           {{- else}}
           value: http://localhost:8080/api/v1/auths/signin/callback
           {{- end}}
+        - name: HR_EMAIL
+          {{- if .Values.hrwebui.mail.enabled}}
+          value: {{ .Values.hrwebui.mail.hr}}
+          {{- else}}
+          value: Qinghao.Zhang@mbzuai.ac.ae
+          {{- end}}
         # SSO Configuration
         tty: true
       imagePullSecrets:
