--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,1 +1,17 @@
-{}
+{
+  "name": "InfoGPT",
+  "start_url": "/",
+  "display": "standalone",
+  "icons": [
+    {
+      "src": "favicon.png",
+      "sizes": "764x766",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icon-high.svg",
+      "sizes": "257x257"
+    }
+  ]
+}
