--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,1 +1,63 @@
-{}
+{
+    "name": "NEWONE",
+    "short_name": "STUFF",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#343541",
+    "orientation": "portrait-primary",
+    "icons": [
+        {"src": "/static/logo.png", "type": "image/png", "sizes": "500x500"},
+        {"src": "/static/icons/maskable/16.png", "sizes": "16x16", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/20.png", "sizes": "20x20", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/29.png", "sizes": "29x29", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/32.png", "sizes": "32x32", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/40.png", "sizes": "40x40", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/50.png", "sizes": "50x50", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/57.png", "sizes": "57x57", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/58.png", "sizes": "58x58", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/60.png", "sizes": "60x60", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/64.png", "sizes": "64x64", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/72.png", "sizes": "72x72", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/76.png", "sizes": "76x76", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/80.png", "sizes": "80x80", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/87.png", "sizes": "87x87", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/100.png", "sizes": "100x100", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/114.png", "sizes": "114x114", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/120.png", "sizes": "120x120", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/128.png", "sizes": "128x128", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/144.png", "sizes": "144x144", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/152.png", "sizes": "152x152", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/167.png", "sizes": "167x167", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/180.png", "sizes": "180x180", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/192.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/256.png", "sizes": "256x256", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/maskable/1024.png", "sizes": "1024x1024", "type": "image/png", "purpose": "maskable"},
+        {"src": "/static/icons/any/16.png", "sizes": "16x16", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/20.png", "sizes": "20x20", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/29.png", "sizes": "29x29", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/32.png", "sizes": "32x32", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/40.png", "sizes": "40x40", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/50.png", "sizes": "50x50", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/57.png", "sizes": "57x57", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/58.png", "sizes": "58x58", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/60.png", "sizes": "60x60", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/64.png", "sizes": "64x64", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/72.png", "sizes": "72x72", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/76.png", "sizes": "76x76", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/80.png", "sizes": "80x80", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/87.png", "sizes": "87x87", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/100.png", "sizes": "100x100", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/114.png", "sizes": "114x114", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/120.png", "sizes": "120x120", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/128.png", "sizes": "128x128", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/144.png", "sizes": "144x144", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/152.png", "sizes": "152x152", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/167.png", "sizes": "167x167", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/180.png", "sizes": "180x180", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/192.png", "sizes": "192x192", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/256.png", "sizes": "256x256", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/512.png", "sizes": "512x512", "type": "image/png", "purpose": "any"},
+        {"src": "/static/icons/any/1024.png", "sizes": "1024x1024", "type": "image/png", "purpose": "any"}
+    ]
+}
