added reading and saving tables from the pdf + added camelot installations

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -46,6 +46,8 @@ pyxlsb==1.0.10
 xlrd==2.0.1
 validators==0.28.1
 pdfplumber==0.11.2
+camelot-py[cv]==0.8.0
+PyPDF2==1.26.0
 
 opencv-python-headless==4.9.0.80
 rapidocr-onnxruntime==1.2.3
